# Homeworks_Geekbrains

./: CMakeLists.txt  README.md
includes/: additional.h  homeworks_structure.h  seminar_1.h  seminar_2.h  seminar_3.h  seminar_4.h  seminar_5.h  seminar_6.h
src/: homeworks_structure.c  main.c  seminar_1.c  seminar_2.c  seminar_3.c  seminar_4.c  seminar_5.c  seminar_6.c
src/seminar_7/: task_1.c  task_2.c  task_3.c  task_4.c
src/seminar_8/: task_1.c  task_2.c  task_3.c  task_4.c
src/seminar_9/: task_1.c  task_2.c  task_3.c
